NJ: cq:include replaced by data-sly-resource.

--- a/components/src/main/content/jcr_root/apps/ecom/components/pages/homepage/content.html
+++ b/components/src/main/content/jcr_root/apps/ecom/components/pages/homepage/content.html
@@ -4,7 +4,8 @@
 
 	<div>
 		<h1>${properties.jcr:title}</h1>
-		
+		<div data-sly-resource="${ @ path='title', resourceType='wcm/foundation/components/title'}"></div>
+    
 
 	</div>
 </div>
