Adding basic markup for templates.

--- a/components/src/main/content/jcr_root/apps/ecom/components/pages/basepage/basepage.html
+++ b/components/src/main/content/jcr_root/apps/ecom/components/pages/basepage/basepage.html
@@ -1,8 +1,6 @@
-
+<!Doctype HTML>
 <html>
-<head>
-     <section data-sly-include="head.html"></section>
-</head>
+<head data-sly-include="head.html"></head>
 
 <body>
     <div>
