--- a/components/src/main/content/jcr_root/apps/ecom/components/pages/basepage/basepage.html
+++ b/components/src/main/content/jcr_root/apps/ecom/components/pages/basepage/basepage.html
@@ -4,7 +4,7 @@
 
 <body>
     <div>
-        <section data-sly-include="header.html"></section>
+        <header data-sly-include="header.html"></header>
         <section data-sly-include="content.html"></section>
         <section data-sly-include="footer.html"></section>
     </div>
