--- a/components/src/main/content/jcr_root/apps/ecom/components/pages/basepage/head.html
+++ b/components/src/main/content/jcr_root/apps/ecom/components/pages/basepage/head.html
@@ -1,2 +1,4 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+<title>Enterprise POC</title>
+<link rel="stylesheet" media="screen" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
