Sample shopping cart application included.

--- a/components/src/main/content/jcr_root/apps/ecom/components/pages/basepage/basepage.html
+++ b/components/src/main/content/jcr_root/apps/ecom/components/pages/basepage/basepage.html
@@ -3,10 +3,8 @@
 <head data-sly-include="head.html"></head>
 
 <body>
-    <div>
-        <header data-sly-include="header.html"></header>
-        <section data-sly-include="content.html"></section>
-        <section data-sly-include="footer.html"></section>
-    </div>
+	<header data-sly-include="header.html"></header>
+    <section data-sly-include="content.html"></section>
+    <footer data-sly-include="footer.html"></footer>
 </body>
 </html>
