--- a/components/src/main/content/jcr_root/apps/ecom/components/pages/homepage/content.html
+++ b/components/src/main/content/jcr_root/apps/ecom/components/pages/homepage/content.html
@@ -1,12 +1,3 @@
-
-<div>
-	Home Page
-
-	<div>
-		<h1>${properties.jcr:title}</h1>
-		<div data-sly-resource="${ @ path='title', resourceType='wcm/foundation/components/title'}"></div>
-    
-
-	</div>
-</div>
-
+<h1>${properties.jcr:title}</h1>
+<div id="main" class="container"></div>
+<script type="text/javascript" src="/etc/designs/ecom/dist/js/main.js"></script>
